--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
             function updateOverlaySize() {
                 if (isRotated) {
-                    overlay.style.width = fitMode === "width" ? "auto" : "100%";
-                    overlay.style.height = fitMode === "width" ? "100%" : "auto";
+                    overlay.style.width = fitMode === "width" ? "100%" : "auto";
+                    overlay.style.height = fitMode === "width" ? "auto" : "100%";
                 } else {
                     overlay.style.width = fitMode === "width" ? "100%" : "auto";
                     overlay.style.height = fitMode === "width" ? "auto" : "100%";
@@ -182,14 +182,25 @@
 
             aspectToggle.addEventListener("click", () => {
                 isWideMode = !isWideMode;
-                if (isWideMode) {
-                    cameraContainer.classList.add("wide-mode");
-                    aspectToggle.textContent = "4:3";
-                } else {
-                    cameraContainer.classList.remove("wide-mode");
-                    cameraContainer.style.aspectRatio = "3 / 4";
-                    aspectToggle.textContent = "16:9";
+                cameraContainer.classList.toggle("wide-mode", isWideMode);
+                aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
+            });
+
+            capture.addEventListener("click", () => {
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
+                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+                if (overlay.src) {
+                    ctx.globalAlpha = overlay.style.opacity;
+                    ctx.drawImage(overlay, 0, 0, canvas.width, canvas.height);
+                    ctx.globalAlpha = 1;
                 }
+
+                const link = document.createElement("a");
+                link.href = canvas.toDataURL("image/png");
+                link.download = "성지순례.png";
+                link.click();
             });
 
             updateOverlaySize(); // 초기 설정
