--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>성지순례 카메라</title>
     <style>
-        /* 전체 레이아웃 */
+        /* 기존 코드 유지 */
         html, body {
             width: 100%;
             height: 100%;
@@ -19,7 +19,6 @@
             align-items: center;
             position: fixed;
         }
-        /* 기본 카메라 화면 (4:3) */
         .container {
             position: fixed;
             top: 50%;
@@ -35,11 +34,9 @@
             z-index: 10;
             background: black;
         }
-        /* 16:9 모드 - 세로 16, 가로 9 */
         .wide-mode {
             aspect-ratio: 9 / 16 !important;
         }
-        /* 카메라 */
         video {
             position: absolute;
             width: 100%;
@@ -47,7 +44,6 @@
             object-fit: cover;
             z-index: 5;
         }
-        /* 오버레이 이미지 */
         img#overlay {
             position: absolute;
             top: 50%;
@@ -58,7 +54,6 @@
             transition: transform 0.3s ease, width 0.3s ease, height 0.3s ease;
             z-index: 15;
         }
-        /* 투명도 조절 바 */
         .opacity-slider {
             position: fixed;
             top: 10px;
@@ -67,7 +62,6 @@
             width: 200px;
             z-index: 30;
         }
-        /* 버튼 스타일 */
         .controls {
             position: fixed;
             bottom: 15px;
@@ -103,7 +97,6 @@
 
     <h1>성지순례 카메라</h1>
 
-    <!-- 투명도 조절 바 -->
     <input type="range" id="opacitySlider" class="opacity-slider" min="0" max="1" step="0.05" value="0.5">
 
     <div class="container" id="cameraContainer">
@@ -124,18 +117,42 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+            const video = document.getElementById("camera");
             const overlay = document.getElementById("overlay");
+            const upload = document.getElementById("upload");
+            const uploadBtn = document.getElementById("uploadBtn");
             const fitToggle = document.getElementById("fitToggle");
             const rotateToggle = document.getElementById("rotateToggle");
+            const capture = document.getElementById("capture");
+            const aspectToggle = document.getElementById("aspectToggle");
+            const opacitySlider = document.getElementById("opacitySlider");
             const cameraContainer = document.getElementById("cameraContainer");
+            const canvas = document.getElementById("canvas");
+            const ctx = canvas.getContext("2d");
 
-            let isRotated = false; // 이미지 회전 상태
-            let fitMode = "width"; // 기본값: 가로 맞춤
+            let isRotated = false; 
+            let fitMode = "width"; 
+            let isWideMode = false; 
+
+            navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
+                .then(stream => {
+                    video.srcObject = stream;
+                })
+                .catch(err => {
+                    console.error("카메라 접근 실패:", err);
+                });
+
+            uploadBtn.addEventListener("click", () => upload.click());
+            upload.addEventListener("change", (event) => {
+                const reader = new FileReader();
+                reader.onload = (e) => overlay.src = e.target.result;
+                reader.readAsDataURL(event.target.files[0]);
+            });
 
             function updateOverlaySize() {
                 if (isRotated) {
-                    overlay.style.width = fitMode === "width" ? "auto" : "100%";
-                    overlay.style.height = fitMode === "width" ? "100%" : "auto";
+                    overlay.style.width = fitMode === "width" ? "100%" : "auto";
+                    overlay.style.height = fitMode === "width" ? "auto" : "100%";
                 } else {
                     overlay.style.width = fitMode === "width" ? "100%" : "auto";
                     overlay.style.height = fitMode === "width" ? "auto" : "100%";
@@ -153,10 +170,17 @@
                 overlay.style.transform = isRotated 
                     ? "translate(-50%, -50%) rotate(90deg)" 
                     : "translate(-50%, -50%) rotate(0deg)";
+                [overlay.style.width, overlay.style.height] = [overlay.style.height, overlay.style.width];
                 updateOverlaySize();
             });
 
-            updateOverlaySize(); // 초기 설정
+            aspectToggle.addEventListener("click", () => {
+                isWideMode = !isWideMode;
+                cameraContainer.classList.toggle("wide-mode", isWideMode);
+                aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
+            });
+
+            updateOverlaySize();
         });
     </script>
 
