--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>성지순례 카메라</title>
     <style>
-        /* 기존 코드 유지 */
         html, body {
             width: 100%;
             height: 100%;
@@ -115,102 +114,98 @@
 
     <input type="file" id="upload" accept="image/*" class="hidden-input">
 
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const video = document.getElementById("camera");
+            const overlay = document.getElementById("overlay");
+            const upload = document.getElementById("upload");
+            const uploadBtn = document.getElementById("uploadBtn");
+            const fitToggle = document.getElementById("fitToggle");
+            const rotateToggle = document.getElementById("rotateToggle");
+            const capture = document.getElementById("capture");
+            const aspectToggle = document.getElementById("aspectToggle");
+            const opacitySlider = document.getElementById("opacitySlider");
+            const cameraContainer = document.getElementById("cameraContainer");
+            const canvas = document.getElementById("canvas");
+            const ctx = canvas.getContext("2d");
 
-<script>
-    document.addEventListener("DOMContentLoaded", () => {
-        const video = document.getElementById("camera");
-        const overlay = document.getElementById("overlay");
-        const upload = document.getElementById("upload");
-        const uploadBtn = document.getElementById("uploadBtn");
-        const fitToggle = document.getElementById("fitToggle");
-        const rotateToggle = document.getElementById("rotateToggle");
-        const capture = document.getElementById("capture");
-        const aspectToggle = document.getElementById("aspectToggle");
-        const opacitySlider = document.getElementById("opacitySlider");
-        const cameraContainer = document.getElementById("cameraContainer");
-        const canvas = document.getElementById("canvas");
-        const ctx = canvas.getContext("2d");
+            let isRotated = false; 
+            let fitMode = "width"; 
+            let isWideMode = false; 
 
-        let isRotated = false; 
-        let fitMode = "width"; 
-        let isWideMode = false; 
+            navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
+                .then(stream => {
+                    video.srcObject = stream;
+                })
+                .catch(err => {
+                    console.error("카메라 접근 실패:", err);
+                });
 
-        navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
-            .then(stream => {
-                video.srcObject = stream;
-            })
-            .catch(err => {
-                console.error("카메라 접근 실패:", err);
+            uploadBtn.addEventListener("click", () => upload.click());
+            upload.addEventListener("change", (event) => {
+                const reader = new FileReader();
+                reader.onload = (e) => overlay.src = e.target.result;
+                reader.readAsDataURL(event.target.files[0]);
             });
 
-        uploadBtn.addEventListener("click", () => upload.click());
-        upload.addEventListener("change", (event) => {
-            const reader = new FileReader();
-            reader.onload = (e) => overlay.src = e.target.result;
-            reader.readAsDataURL(event.target.files[0]);
-        });
-
-        function updateOverlaySize() {
-            if (isRotated) {
-                overlay.style.width = fitMode === "width" ? "auto" : "100%";
-                overlay.style.height = fitMode === "width" ? "100%" : "auto";
-            } else {
-                overlay.style.width = fitMode === "width" ? "100%" : "auto";
-                overlay.style.height = fitMode === "width" ? "auto" : "100%";
+            function updateOverlaySize() {
+                if (isRotated) {
+                    overlay.style.width = fitMode === "width" ? "auto" : "100%";
+                    overlay.style.height = fitMode === "width" ? "100%" : "auto";
+                } else {
+                    overlay.style.width = fitMode === "width" ? "100%" : "auto";
+                    overlay.style.height = fitMode === "width" ? "auto" : "100%";
+                }
             }
-        }
 
-        fitToggle.addEventListener("click", () => {
-            fitMode = fitMode === "width" ? "height" : "width";
-            fitToggle.textContent = fitMode === "width" ? "가로" : "세로";
+            fitToggle.addEventListener("click", () => {
+                fitMode = fitMode === "width" ? "height" : "width";
+                fitToggle.textContent = fitMode === "width" ? "가로" : "세로";
+                updateOverlaySize();
+            });
+
+            rotateToggle.addEventListener("click", () => {
+                isRotated = !isRotated;
+                overlay.style.transform = isRotated 
+                    ? "translate(-50%, -50%) rotate(90deg)" 
+                    : "translate(-50%, -50%) rotate(0deg)";
+
+                // ✅ 수정된 부분: 회전 후에도 가로/세로 맞춤이 회전된 크기에 맞게 적용되도록 변경
+                if (isRotated) {
+                    fitMode = fitMode === "width" ? "height" : "width";
+                } else {
+                    fitMode = fitMode === "height" ? "width" : "height"; // 원래대로 복구
+                }
+
+                fitToggle.textContent = fitMode === "width" ? "가로" : "세로";
+                updateOverlaySize();
+            });
+
+            aspectToggle.addEventListener("click", () => {
+                isWideMode = !isWideMode;
+                cameraContainer.classList.toggle("wide-mode", isWideMode);
+                aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
+            });
+
+            capture.addEventListener("click", () => {
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
+                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+                if (overlay.src) {
+                    ctx.globalAlpha = overlay.style.opacity;
+                    ctx.drawImage(overlay, 0, 0, canvas.width, canvas.height);
+                    ctx.globalAlpha = 1;
+                }
+
+                const link = document.createElement("a");
+                link.href = canvas.toDataURL("image/png");
+                link.download = "성지순례.png";
+                link.click();
+            });
+
             updateOverlaySize();
         });
-
-        rotateToggle.addEventListener("click", () => {
-            isRotated = !isRotated;
-            overlay.style.transform = isRotated 
-                ? "translate(-50%, -50%) rotate(90deg)" 
-                : "translate(-50%, -50%) rotate(0deg)";
-
-            // ✅ 수정된 부분: 회전 후에도 가로/세로 맞춤이 회전된 크기에 맞게 적용되도록 변경
-            if (isRotated) {
-                overlay.style.width = fitMode === "width" ? "auto" : "100%";
-                overlay.style.height = fitMode === "width" ? "100%" : "auto";
-            } else {
-                overlay.style.width = fitMode === "width" ? "100%" : "auto";
-                overlay.style.height = fitMode === "width" ? "auto" : "100%";
-            }
-        });
-
-        aspectToggle.addEventListener("click", () => {
-            isWideMode = !isWideMode;
-            cameraContainer.classList.toggle("wide-mode", isWideMode);
-            aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
-        });
-
-        capture.addEventListener("click", () => {
-            canvas.width = video.videoWidth;
-            canvas.height = video.videoHeight;
-            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-            if (overlay.src) {
-                ctx.globalAlpha = overlay.style.opacity;
-                ctx.drawImage(overlay, 0, 0, canvas.width, canvas.height);
-                ctx.globalAlpha = 1;
-            }
-
-            const link = document.createElement("a");
-            link.href = canvas.toDataURL("image/png");
-            link.download = "성지순례.png";
-            link.click();
-        });
-
-        updateOverlaySize();
-    });
-</script>
-
-
-
-
+    </script>
 </body>
 </html>
