--- a/index.html
+++ b/index.html
@@ -172,9 +172,11 @@
 
                 // ✅ 수정된 부분: 회전 후에도 가로/세로 맞춤이 회전된 크기에 맞게 적용되도록 변경
                 if (isRotated) {
-                    fitMode = fitMode === "width" ? "height" : "width";
+                    let temp = fitMode;
+                    fitMode = temp === "width" ? "height" : "width";
                 } else {
-                    fitMode = fitMode === "height" ? "width" : "height"; // 원래대로 복구
+                    let temp = fitMode;
+                    fitMode = temp === "height" ? "width" : "height";
                 }
 
                 fitToggle.textContent = fitMode === "width" ? "가로" : "세로";
@@ -185,23 +187,6 @@
                 isWideMode = !isWideMode;
                 cameraContainer.classList.toggle("wide-mode", isWideMode);
                 aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
-            });
-
-            capture.addEventListener("click", () => {
-                canvas.width = video.videoWidth;
-                canvas.height = video.videoHeight;
-                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-                if (overlay.src) {
-                    ctx.globalAlpha = overlay.style.opacity;
-                    ctx.drawImage(overlay, 0, 0, canvas.width, canvas.height);
-                    ctx.globalAlpha = 1;
-                }
-
-                const link = document.createElement("a");
-                link.href = canvas.toDataURL("image/png");
-                link.download = "성지순례.png";
-                link.click();
             });
 
             updateOverlaySize();
