--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 
             function updateOverlaySize() {
                 if (isRotated) {
-                    overlay.style.width = fitMode === "width" ? "auto" : "100%";
-                    overlay.style.height = fitMode === "width" ? "100%" : "auto";
+                    overlay.style.width = fitMode === "width" ? "100%" : "auto";
+                    overlay.style.height = fitMode === "width" ? "auto" : "100%";
                 } else {
                     overlay.style.width = fitMode === "width" ? "100%" : "auto";
                     overlay.style.height = fitMode === "width" ? "auto" : "100%";
@@ -170,7 +170,10 @@
                     ? "translate(-50%, -50%) rotate(90deg)" 
                     : "translate(-50%, -50%) rotate(0deg)";
 
-                // ✅ 회전 후에도 크기 자동 조정
+                // ✅ 회전 시 가로/세로 맞춤을 자동으로 조정
+                fitMode = fitMode === "width" ? "height" : "width";
+                fitToggle.textContent = fitMode === "width" ? "가로" : "세로";
+                
                 updateOverlaySize();
             });
 
