--- a/index.html
+++ b/index.html
@@ -116,43 +116,23 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const video = document.getElementById("camera");
             const overlay = document.getElementById("overlay");
-            const upload = document.getElementById("upload");
-            const uploadBtn = document.getElementById("uploadBtn");
             const fitToggle = document.getElementById("fitToggle");
             const rotateToggle = document.getElementById("rotateToggle");
-            const capture = document.getElementById("capture");
-            const aspectToggle = document.getElementById("aspectToggle");
-            const opacitySlider = document.getElementById("opacitySlider");
-            const cameraContainer = document.getElementById("cameraContainer");
-            const canvas = document.getElementById("canvas");
-            const ctx = canvas.getContext("2d");
 
-            let isRotated = false; 
-            let fitMode = "width"; 
-            let isWideMode = false; 
-
-            navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
-                .then(stream => {
-                    video.srcObject = stream;
-                })
-                .catch(err => {
-                    console.error("카메라 접근 실패:", err);
-                });
-
-            uploadBtn.addEventListener("click", () => upload.click());
-            upload.addEventListener("change", (event) => {
-                const reader = new FileReader();
-                reader.onload = (e) => overlay.src = e.target.result;
-                reader.readAsDataURL(event.target.files[0]);
-            });
+            let isRotated = false;
+            let fitMode = "width"; // 기본값: 가로 맞춤
 
             function updateOverlaySize() {
                 if (isRotated) {
-                    overlay.style.width = fitMode === "width" ? "auto" : "100%";
-                    overlay.style.height = fitMode === "width" ? "100%" : "auto";
+                    // ✅ 90도 회전 후에는 회전된 이미지 크기를 다시 측정해서 적용
+                    let imgWidth = overlay.naturalWidth;
+                    let imgHeight = overlay.naturalHeight;
+
+                    overlay.style.width = fitMode === "width" ? `${imgHeight}px` : "100%";
+                    overlay.style.height = fitMode === "width" ? "100%" : `${imgWidth}px`;
                 } else {
+                    // ✅ 회전 전에는 기존 가로/세로 맞춤 유지
                     overlay.style.width = fitMode === "width" ? "100%" : "auto";
                     overlay.style.height = fitMode === "width" ? "auto" : "100%";
                 }
@@ -170,33 +150,8 @@
                     ? "translate(-50%, -50%) rotate(90deg)" 
                     : "translate(-50%, -50%) rotate(0deg)";
 
-                fitMode = fitMode === "width" ? "height" : "width";
-                fitToggle.textContent = fitMode === "width" ? "가로" : "세로";
-
+                // ✅ 90도 회전 후, 크기 다시 측정해서 적용
                 updateOverlaySize();
-            });
-
-            aspectToggle.addEventListener("click", () => {
-                isWideMode = !isWideMode;
-                cameraContainer.classList.toggle("wide-mode", isWideMode);
-                aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
-            });
-
-            capture.addEventListener("click", () => {
-                canvas.width = video.videoWidth;
-                canvas.height = video.videoHeight;
-                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-                if (overlay.src) {
-                    ctx.globalAlpha = overlay.style.opacity;
-                    ctx.drawImage(overlay, 0, 0, canvas.width, canvas.height);
-                    ctx.globalAlpha = 1;
-                }
-
-                const link = document.createElement("a");
-                link.href = canvas.toDataURL("image/png");
-                link.download = "성지순례.png";
-                link.click();
             });
 
             updateOverlaySize();
