--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
             let fitMode = "width"; 
             let isWideMode = false; 
 
-            // ✅ 카메라 기능 복구
             navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
                 .then(stream => {
                     video.srcObject = stream;
@@ -150,14 +149,10 @@
             });
 
             function updateOverlaySize() {
-                if (!overlay.src) return; // 이미지 없을 때 실행 안 함
-
+                if (!overlay.src) return;
                 if (isRotated) {
-                    let imgWidth = overlay.naturalWidth;
-                    let imgHeight = overlay.naturalHeight;
-
-                    overlay.style.width = fitMode === "width" ? `${imgHeight}px` : "100%";
-                    overlay.style.height = fitMode === "width" ? "100%" : `${imgWidth}px`;
+                    overlay.style.width = fitMode === "width" ? "auto" : "100%";
+                    overlay.style.height = fitMode === "width" ? "100%" : "auto";
                 } else {
                     overlay.style.width = fitMode === "width" ? "100%" : "auto";
                     overlay.style.height = fitMode === "width" ? "auto" : "100%";
@@ -176,22 +171,6 @@
                     ? "translate(-50%, -50%) rotate(90deg)" 
                     : "translate(-50%, -50%) rotate(0deg)";
                 updateOverlaySize();
-            });
-
-            aspectToggle.addEventListener("click", () => {
-                isWideMode = !isWideMode;
-                cameraContainer.classList.toggle("wide-mode", isWideMode);
-                aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
-            });
-
-            capture.addEventListener("click", () => {
-                canvas.width = video.videoWidth;
-                canvas.height = video.videoHeight;
-                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-                const link = document.createElement("a");
-                link.href = canvas.toDataURL("image/png");
-                link.download = "성지순례.png";
-                link.click();
             });
 
             updateOverlaySize();
