--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
             transform: translate(-50%, -50%) rotate(0deg);
             opacity: 0.5;
             pointer-events: none;
-            transition: transform 0.3s ease, width 0.3s ease, height 0.3s ease;
+            transition: transform 0.3s ease;
             z-index: 15;
+            width: 100%;
+            height: auto;
         }
         .opacity-slider {
             position: fixed;
@@ -149,13 +151,14 @@
             });
 
             function updateOverlaySize() {
-                if (!overlay.src) return;
+                if (!overlay.src) return; 
+
                 if (isRotated) {
-                    overlay.style.width = fitMode === "width" ? "auto" : "100%";
-                    overlay.style.height = fitMode === "width" ? "100%" : "auto";
+                    overlay.style.width = "auto";
+                    overlay.style.height = "100%";
                 } else {
-                    overlay.style.width = fitMode === "width" ? "100%" : "auto";
-                    overlay.style.height = fitMode === "width" ? "auto" : "100%";
+                    overlay.style.width = "100%";
+                    overlay.style.height = "auto";
                 }
             }
 
@@ -171,6 +174,22 @@
                     ? "translate(-50%, -50%) rotate(90deg)" 
                     : "translate(-50%, -50%) rotate(0deg)";
                 updateOverlaySize();
+            });
+
+            aspectToggle.addEventListener("click", () => {
+                isWideMode = !isWideMode;
+                cameraContainer.classList.toggle("wide-mode", isWideMode);
+                aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
+            });
+
+            capture.addEventListener("click", () => {
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
+                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+                const link = document.createElement("a");
+                link.href = canvas.toDataURL("image/png");
+                link.download = "성지순례.png";
+                link.click();
             });
 
             updateOverlaySize();
