--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
             transform: translate(-50%, -50%) rotate(0deg);
             opacity: 0.5;
             pointer-events: none;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease, width 0.3s ease, height 0.3s ease;
             z-index: 15;
-            width: 100%;
-            height: auto;
         }
         .opacity-slider {
             position: fixed;
@@ -134,6 +132,7 @@
             let isRotated = false; 
             let fitMode = "width"; 
             let isWideMode = false; 
+            let a, b;
 
             navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
                 .then(stream => {
@@ -146,20 +145,23 @@
             uploadBtn.addEventListener("click", () => upload.click());
             upload.addEventListener("change", (event) => {
                 const reader = new FileReader();
-                reader.onload = (e) => overlay.src = e.target.result;
+                reader.onload = (e) => {
+                    overlay.src = e.target.result;
+                    const img = new Image();
+                    img.onload = () => {
+                        a = img.naturalWidth;
+                        b = img.naturalHeight;
+                        updateOverlaySize();
+                    };
+                    img.src = e.target.result;
+                };
                 reader.readAsDataURL(event.target.files[0]);
             });
 
             function updateOverlaySize() {
-                if (!overlay.src) return; 
-
-                if (isRotated) {
-                    overlay.style.width = "auto";
-                    overlay.style.height = "100%";
-                } else {
-                    overlay.style.width = "100%";
-                    overlay.style.height = "auto";
-                }
+                if (!overlay.src) return;
+                overlay.style.width = fitMode === "width" ? "100%" : "auto";
+                overlay.style.height = fitMode === "width" ? "auto" : "100%";
             }
 
             fitToggle.addEventListener("click", () => {
@@ -170,26 +172,11 @@
 
             rotateToggle.addEventListener("click", () => {
                 isRotated = !isRotated;
+                [a, b] = [b, a];  
                 overlay.style.transform = isRotated 
                     ? "translate(-50%, -50%) rotate(90deg)" 
                     : "translate(-50%, -50%) rotate(0deg)";
                 updateOverlaySize();
-            });
-
-            aspectToggle.addEventListener("click", () => {
-                isWideMode = !isWideMode;
-                cameraContainer.classList.toggle("wide-mode", isWideMode);
-                aspectToggle.textContent = isWideMode ? "4:3" : "16:9";
-            });
-
-            capture.addEventListener("click", () => {
-                canvas.width = video.videoWidth;
-                canvas.height = video.videoHeight;
-                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-                const link = document.createElement("a");
-                link.href = canvas.toDataURL("image/png");
-                link.download = "성지순례.png";
-                link.click();
             });
 
             updateOverlaySize();
